--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "commit": "cz"
   },
   "dependencies": {
+    "@chakra-ui/react": "^3.2.0",
+    "@emotion/react": "^11.13.5",
     "@heroicons/react": "^2.1.5",
     "next": "14.2.6",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "tailwind-variants": "^0.2.1"
   },
   "devDependencies": {
@@ -31,9 +34,7 @@
     "eslint-config-next": "14.2.6",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "postcss": "^8",
     "prettier": "^3.3.3",
-    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
   "config": {
