--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "next-boilerplate",
-  "version": "0.1.0",
+  "name": "hunterbool",
+  "version": "1.0.0",
   "private": true,
   "license": "MIT",
   "scripts": {
@@ -15,7 +15,6 @@
   "dependencies": {
     "@chakra-ui/react": "^3.2.0",
     "@emotion/react": "^11.13.5",
-    "@heroicons/react": "^2.1.5",
     "@hookform/resolvers": "^3.9.1",
     "next": "14.2.6",
     "next-themes": "^0.3.0",
@@ -23,7 +22,6 @@
     "react-dom": "^18",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
-    "tailwind-variants": "^0.2.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
